# ECO

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
eco/linear_algebra/header/: linalg.h  matrix.h
eco/linear_algebra/src/: linalg.hpp  matrix.hpp
eco/linear_algebra/test/: test_linalg.h  test_matrix.h
